@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-17T08:09:09Z",
-  "count_outdated" : 57,
-  "uniques_outdated" : 23,
+  "timestamp" : "2022-09-19T00:40:40Z",
+  "count_outdated" : 60,
+  "uniques_outdated" : 24,
   "count" : 66,
   "uniques" : 28,
   "views" : [
-    {
-      "timestamp": "2022-09-04T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 1,
