@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 6,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-09-04T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 1,
