@@ -1,3 +1,11 @@
+2022-09-19T00:40:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3079238523
+* notice: last 14d: unq all: 4 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 57 / 28 66
+* notice: next accum: outdated-unq outdated-all / unq all: 24 60 / 28 66
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-04] / []
+
 2022-09-17T08:09:09Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3072650965
 * notice: last 14d: unq all: 5 9
